# UR5-pick-and-place-simulation

./: README.md
src/robotiq_description/: package.xml
src/robotiq_description/urdf/: robotiq_85_gripper.urdf.xacro  robotiq_85_gripper.xacro
src/ur5/: CMakeLists.txt  package.xml
src/ur5/config/: bridge_config.yaml  ur_rviz.rviz
src/ur5/launch/: display.launch.py  gazebo.launch.py
src/ur5/urdf/: camera.urdf  rgbd_camera.urdf.xacro  table_world.config  ur5.urdf.xacro
src/ur5/world/: my_world.sdf
src/ur5_bringup/: CMakeLists.txt  package.xml
src/ur5_bringup/launch/: launch_gazebo_moveit.py
src/ur5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ur5_moveit_config/config/: bridge_config.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  sensors_3d.yaml  ur.ros2_control.xacro  ur.srdf  ur.urdf.xacro
src/ur5_moveit_config/launch/: gazebo.launch.py  move_group.launch.py  moveit_rviz.launch.py  pick_and_place.launch.py
src/ur5_moveit_config/src/: moveit.cpp
src/ur5_vision/: package.xml  setup.cfg  setup.py
src/ur5_vision/ur5_vision/: image_node.py
